--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
+    "react-dnd": "^3.0.2",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4"
   },
@@ -11,6 +12,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch-css": "node-sass src/assets/style/main.scss src/assets/style/pretender.css --watch --output-style compressed"
+  },
+  "devDependencies": {
+    "node-sass": "^4.9.0"
   }
 }
